example/SyntaxError/variable-binding-error.pione
$X := 1

Rule Main
  input '*.a'
  output '*b'
Action
cat {$I[1]} > {$O[1]}
echo {$X} >> {$O[1]}
End

$X := 2
